--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
 
           <div class="form-group">
             <label class="form-label" for="name">Имя</label>
-            <input class="form-input" type="text" name="name" id="name" />
+            <input class="form-input" type="text" name="name" id="name" required />
             <svg class="form-icons" width="18" height="18" aria-label="Иконка человека">
               <use href="./images/icons.svg#icon-person-black"></use>
             </svg>
@@ -577,7 +577,7 @@
 
           <div class="form-group">
             <label class="form-label" for="tel">Телефон</label>
-            <input class="form-input" type="tel" name="tel" id="tel" />
+            <input class="form-input" type="tel" name="tel" id="tel" required />
             <svg class="form-icons" width="18" height="18" aria-label="Иконка телефона">
               <use href="./images/icons.svg#icon-phone-black"></use>
             </svg>
@@ -585,7 +585,7 @@
 
           <div class="form-group">
             <label class="form-label" for="email">Почта</label>
-            <input class="form-input" type="email" name="mail" id="email" />
+            <input class="form-input" type="email" name="mail" id="email" required />
             <svg class="form-icons" width="18" height="18" aria-label="Иконка почтового листа">
               <use href="./images/icons.svg#icon-email-black"></use>
             </svg>
@@ -609,6 +609,7 @@
               type="checkbox"
               name="checkbox"
               value="checkbox"
+              required
             />
             <span class="checkbox-icon"></span>
             <span class="checkbox-label"
